# momo

./: CMakeLists.txt  README.zh.md
src/: watchdog.h  websocket.cpp  websocket.h
src/hwenc_v4l2/: libcamera_capturer.cpp  libcamera_capturer.h  v4l2_buffers.h
src/rtc/: rtc_manager.h
